# addon-starter-python

./: .env.example  .gitignore  README.md  manifest.example.yaml  pyproject.toml
app/: accounts.py  callback.py  catalog.py  config.py  db.py  dispatch.py  installs.py  main.py  nonce.py
app/platform/: iframe.py  oauth.py  sig.py
app/ui/: __init__.py
app/ui/static/: bridge.js
app/ui/templates/: accounts.html  base.html  history.html  mapping.html
tests/: conftest.py  test_callback.py  test_dispatch_signature.py  test_dispatch_stub.py  test_iframe_auth.py  test_installs.py  test_nonce.py  test_oauth_install.py
