[project]
name = "addon-starter-python"
version = "0.1.0"
description = "Starter template for building 23bisnis platform addons (supplier adapter + admin UI) in Python."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "23bisnis-addon-sdk>=0.1.0",
    "sqlalchemy>=2.0,<3.0",
    "jinja2>=3.1,<4.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0,<3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*HMAC key.*below the minimum.*:UserWarning",
    "ignore::DeprecationWarning",
    "ignore:.*httpx.*starlette.*:UserWarning",
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]
